--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "wolf-kill",
-    "version": "1.00.0",
+    "version": "1.1.0",
     "author": "rejekerclear",
     "description": "wolf kill",
     "main": "index.js",
@@ -11,13 +11,7 @@
     },
     "dependencies": {
         "@babel/plugin-proposal-class-properties": "^7.8.3",
-        "@babel/runtime": "^7.8.4",
-        "@koa/router": "^8.0.8",
-        "art-template": "^4.13.2",
-        "fs-extra": "^8.1.0",
-        "koa": "^2.11.0",
-        "koa-router": "^8.0.8",
-        "koa-static": "^5.0.0"
+        "@babel/runtime": "^7.8.4"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.3",
@@ -42,7 +36,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/rejiejay/wlof-kill.git"
+        "url": "git+https://github.com/rejiejay/wolf-kill.git"
     },
     "keywords": [
         "react"
@@ -52,8 +46,8 @@
     },
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/rejiejay/wlof-kill/issues"
+        "url": "https://github.com/rejiejay/wolf-kill/issues"
     },
-    "homepage": "https://github.com/rejiejay/wlof-kill#readme",
+    "homepage": "https://github.com/rejiejay/wolf-kill#readme",
     "type": "module"
 }
